--- a/styles.css
+++ b/styles.css
@@ -26,13 +26,44 @@
     height: 600px;
     border-radius: 10px;
     box-shadow: 0px 2px 5px 3px rgba(0, 0, 0, 0.30);
+    transition: 0.25s ease;
 }
 /* Profile Card 1 */
 #profileCard1{
-
+    width: 450px;
+    height: 600px;
+    flex-shrink: 0;
+    border-radius: 10px;
+    background: #D9FFF6;
+    box-shadow: 0px 2px 5px 2px rgba(0, 0, 0, 0.30);
 
 }
-
+#profileCard1 h1{
+    display: flex;
+    width: 450px;
+    height: 60px;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    color: #000;
+    text-align: center;
+    font-family: Inter;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+#profileCard1 img{
+    border-radius: 100%;
+    width: 200px;
+    height: 200px;
+    fill: #D9D9D9;
+    margin: 20px;
+}
+#profileCard1:hover{
+    box-shadow: 0px 0px 20px 2px black;
+    transition: 0.25s ease;
+}
 /* Profile Card 2 */
 #profileCard2{
     
@@ -43,6 +74,42 @@
     
 }
 
+/* Description Class */
+.description{
+    margin: 0 auto;
+    display: flex;
+    width: 350px;
+    height: auto;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    color: #000;
+    text-align: center;
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+/* emailAddress class */
+.emailAddress{
+    margin-top:20px;
+    color: #000;
+    text-align: center;
+    font-family: Inter;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    color: #000;
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
 /* Animations */
 @keyframes fast {
     
